terraform/alb.tf
# Applicaion Load Balancer
resource "aws_lb" "alb" {
    name = "${var.app_name}-alb"
    internal = false
    load_balancer_type = "application"
    security_groups = [aws_security_group.alb.id]
    subnets = [aws_subnet.public_a.id, aws_subnet.public_b.id]

    tags = {
        name = "${var.app_name}-alb"
    }
}

# Target Group - where ALB forwards traffic to
resource "aws_lb_target_group" "app" {
    name = "${var.app_name}-tg"
    port = 5000
    protocol = "HTTP"
    vpc_id = aws_vpc.main.id
    target_type = "ip"

    # Health Check
    health_check {
        enabled = true
        healthy_threshold = 2
        unhealthy_threshold = 3
        timeout = 5
        path = "/"
        matcher = "200"
    }

    tags = {
        Name = "${var.app_name}-tg"
    }
}

# Listener - sits on ALB, forwards traffic to target group
resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.main.arn
    port = 80
    protocol = "HTTP"

    default_action {
        type = "forward"
        target_group_arn = aws_lb_target_group.app.arn
    }
}
